# python-parquet-to-json

./: README.md  main.py  pyproject.toml
