[tool.poetry]
name = "parquet"
version = "0.1.0"
description = ""
authors = ["Mykhailo Nikiforov <u@xaked.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
pyarrow = "^14.0.1"
fastparquet = "^2023.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
